--- a/src/main/resources/Views/Login-view.fxml
+++ b/src/main/resources/Views/Login-view.fxml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<StackPane prefHeight="810.0" prefWidth="800.0" stylesheets="@../Styles/Login.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.LoginController">
+<StackPane prefHeight="810.0" prefWidth="800.0" stylesheets="@../Styles/Login.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.LoginController">
 
     <!-- Login Container - will stay centered -->
     <VBox alignment="CENTER" maxHeight="650.0" maxWidth="450.0" spacing="25.0" styleClass="login-container">
         <padding>
             <Insets bottom="30.0" left="40.0" right="40.0" top="30.0" />
         </padding>
-
+   
         <!-- Logo Section -->
         <HBox alignment="CENTER" styleClass="logo-container">
             <ImageView fitHeight="150.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" styleClass="logo-image">
@@ -37,13 +45,23 @@
             <!-- Username Field -->
             <VBox spacing="5.0" styleClass="input-container">
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="field-label" text="Username:" />
-                <TextField fx:id="usernameTextField" prefHeight="25.0" prefWidth="340.0" promptText="Enter email or username" styleClass="text-field" />
+            <HBox alignment="CENTER" spacing="5.0">
+               <children>
+                  <FontAwesomeIconView glyphName="ENVELOPE_ALT" size="20" />
+                      <TextField fx:id="usernameTextField" prefHeight="25.0" prefWidth="340.0" promptText="Enter email or username" styleClass="text-field" />
+               </children>
+            </HBox>
             </VBox>
 
             <!-- Password Field -->
             <VBox spacing="5.0" styleClass="input-container">
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="field-label" text="Password:" />
-                <PasswordField fx:id="passwordPasswordField" prefWidth="340.0" promptText="Enter password" styleClass="password-field" />
+            <HBox alignment="CENTER" spacing="5.0">
+               <children>
+                  <FontAwesomeIconView glyphName="UNLOCK_ALT" size="22" />
+                      <PasswordField fx:id="passwordPasswordField" prefWidth="340.0" promptText="Enter password" styleClass="password-field" />
+               </children>
+            </HBox>
             </VBox>
         </VBox>
 
