--- a/src/main/resources/Views/User/Bookings-view.fxml
+++ b/src/main/resources/Views/User/Bookings-view.fxml
@@ -1,22 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingsController">
-   <VBox layoutX="60.0" layoutY="31.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <children>
-          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Bookings" />
-         <Button fx:id="newBooking_btn" mnemonicParsing="false" text="New Booking">
-            <graphic>
-               <FontAwesomeIconView glyphName="PLUS" />
-            </graphic>
-         </Button>
-         <ListView fx:id="bookingList" prefHeight="200.0" prefWidth="200.0" />
-      </children>
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="bookings-container" stylesheets="@../../Styles/User/Dashboard.css;@../../Styles/User/BookingItem.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingsController">
+   <VBox spacing="20" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <padding>
+         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+      </padding>
+      
+      <!-- Header Section -->
+      <VBox prefHeight="41.0" prefWidth="772.0" spacing="8">
+         <Label styleClass="header-title" text="Bookings" />
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-subtitle" text="Latest bookings and activities" wrappingWidth="600" />
+      </VBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="1240.0">
+         <children>
+            <FontAwesomeIconView glyphName="SEARCH" />
+            <TextField fx:id="search_fld" prefHeight="32.0" prefWidth="1006.0" />
+            <Pane prefHeight="47.0" prefWidth="2.0" HBox.hgrow="ALWAYS" />
+      
+                  <!-- New Booking Button -->
+            <Button fx:id="newBooking_btn" mnemonicParsing="false" prefHeight="37.0" prefWidth="101.0" styleClass="primary-button" text="New Booking">
+               <graphic>
+                  <FontAwesomeIconView glyphName="PLUS" />
+               </graphic>
+            </Button>
+         </children>
+      </HBox>
+
+                        <!-- Table Container -->
+      <VBox spacing="0" styleClass="booking-table-wrapper" VBox.vgrow="ALWAYS">
+         <TableView fx:id="booking_table" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+           <columns>
+             <TableColumn fx:id="bookingId_col" prefWidth="75.0" text="Booking ID" />
+             <TableColumn fx:id="client_col" prefWidth="75.0" text="Client" />
+               <TableColumn fx:id="destination_col" prefWidth="75.0" text="Destination" />
+               <TableColumn fx:id="package_col" prefWidth="75.0" text="Package" />
+               <TableColumn fx:id="startDate_col" prefWidth="75.0" text="Start Date" />
+               <TableColumn fx:id="endDate_col" prefWidth="75.0" text="End Date" />
+               <TableColumn fx:id="status_col" prefWidth="75.0" text="Status" />
+           </columns>
+            <columnResizePolicy>
+               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+         </TableView>
+         
+                        </VBox>
+      
    </VBox>
 </AnchorPane>
