--- a/src/main/resources/Views/User/Clients-view.fxml
+++ b/src/main/resources/Views/User/Clients-view.fxml
@@ -1,19 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.CustomersController">
-    <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Customers" />
-   <HBox alignment="CENTER" layoutX="14.0" layoutY="41.0" prefHeight="25.0" prefWidth="246.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.ClientsController">
+   <VBox layoutX="14.0" layoutY="14.05078125" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
-         <FontAwesomeIconView glyphName="SEARCH" HBox.hgrow="ALWAYS" />
-         <TextField fx:id="customerSearch_fld" HBox.hgrow="ALWAYS" />
+          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Client Records" />
+         <HBox alignment="CENTER" prefHeight="25.0" prefWidth="246.0">
+            <children>
+               <FontAwesomeIconView glyphName="SEARCH" HBox.hgrow="ALWAYS" />
+               <TextField fx:id="customerSearch_fld" HBox.hgrow="ALWAYS" />
+            </children>
+         </HBox>
+         <TableView fx:id="clients_table" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+           <columns>
+             <TableColumn fx:id="clientName_col" prefWidth="75.0" text="Client Name" />
+             <TableColumn fx:id="contactNum_col" prefWidth="75.0" text="Contact Number" />
+               <TableColumn fx:id="email_col" prefWidth="75.0" text="Email" />
+               <TableColumn fx:id="destination_col" prefWidth="75.0" text="Destination" />
+               <TableColumn fx:id="tripStatus_col" prefWidth="75.0" text="Trip Status" />
+               <TableColumn fx:id="tripDates_col" prefWidth="75.0" text="Trip Dates" />
+               <TableColumn fx:id="actions" prefWidth="75.0" text="Actions" />
+           </columns>
+            <columnResizePolicy>
+               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+         </TableView>
       </children>
-   </HBox>
-   <ListView fx:id="customerListView" layoutX="14.0" layoutY="73.0" prefHeight="200.0" prefWidth="578.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+   </VBox>
 </AnchorPane>
